--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
             <h2>Location</h2>
           </div>
         </div>
-        <div class="row justify-content-center>
-          <div class="col-md-6">
+        <div class="row justify-content-center">
+          <div class="col-md-6"></div>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994.68539031323!2d100.6947013834276!3d-0.858185003525234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMMKwNTEnMjkuNSJTIDEwMMKwNDEnNDMuNyJF!5e0!3m2!1sid!2sid!4v1620287699089!5m2!1sid!2sid"
               width="400"
@@ -243,7 +243,7 @@
     <footer class="text-center" style="background-color: #f79c9c;">
       <p >created by <a href="">loadik project</a>
       </p>
-    <iframe src="audio/th.mp3" allow="autoplay" id=iframeAudio style="display: none;"></iframe>
+    
      <audio src="audio/th.mp3"  autoplay id="playAudio"></audio> 
     </footer>
     <!-- end footer -->
